--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -71,7 +71,7 @@
 
   .characterWrapper {
     position: fixed;
-    top: 200px;
+    top: 100px;
     left: unset;
     right: 100px;
     width: auto;
